--- a/src/app/bookings/bookings.page.html
+++ b/src/app/bookings/bookings.page.html
@@ -1,21 +1,28 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>Your Booking</ion-title>
+    <ion-title>Your Bookings</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Your Booking</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
   <ion-grid>
     <ion-row>
-      <ion-col sizeMd="6" offsetMd="3">
+      <ion-col
+        size-md="6"
+        offset-md="3"
+        *ngIf="!loadedBookings || loadedBookings.length <= 0"
+        class="ion-text-center"
+      >
+        <p>No bookings found!</p>
+      </ion-col>
+      <ion-col
+        size-md="6"
+        offset-md="3"
+        *ngIf="loadedBookings && loadedBookings.length > 0"
+      >
         <ion-list>
           <ion-item-sliding
             *ngFor="let booking of loadedBookings"
