--- a/src/app/bookings/create-booking/create-booking.component.html
+++ b/src/app/bookings/create-booking/create-booking.component.html
@@ -1,4 +1,4 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
     <ion-title>{{ selectedPlace.title }}</ion-title>
     <ion-buttons slot="primary">
@@ -9,12 +9,106 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true" class="ion-padding ion-text-center">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">{{ selectedPlace.title }}</ion-title>
-    </ion-toolbar>
-  </ion-header>
-  <p>{{ selectedPlace.description }}</p>
-  <ion-button color="primary" (click)="onBookPlace()">Book!</ion-button>
+<ion-content class="ion-text-center" padding>
+  <form (ngSubmit)="onBookPlace()" #f="ngForm">
+    <ion-grid>
+      <ion-row>
+        <ion-col size-sm="6" offset-sm="3">
+          <ion-item>
+            <ion-input
+              label="First Name"
+              labelPlacement="floating"
+              type="text"
+              ngModel
+              name="first-name"
+              required
+            ></ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size-sm="6" offset-sm="3">
+          <ion-item>
+            <ion-input
+              label="Last Name"
+              labelPlacement="floating"
+              type="text"
+              ngModel
+              name="last-name"
+              required
+            ></ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size-sm="6" offset-sm="3">
+          <ion-item>
+            <ion-label position="floating">Number of Guests</ion-label>
+            <ion-select [ngModel]="'2'" name="guest-number">
+              <ion-select-option value="1">1</ion-select-option>
+              <ion-select-option value="2">2</ion-select-option>
+              <ion-select-option value="3">3</ion-select-option>
+            </ion-select>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col sizeSm="3" offsetSm="3">
+          <ion-item>
+            <ion-label>From</ion-label>
+            <ion-datetime-button datetime="date-from"></ion-datetime-button>
+
+            <ion-modal [keepContentsMounted]="true">
+              <ng-template>
+                <ion-datetime
+                  id="date-from"
+                  name="date-from"
+                  presentation="date"
+                  [min]="selectedPlace.availableFrom?.toISOString()"
+                  [max]="selectedPlace.availableTo?.toISOString()"
+                  [ngModel]="startDate"
+                  #startDateCtrl="ngModel"
+                  required
+                ></ion-datetime>
+              </ng-template>
+            </ion-modal>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col sizeSm="3" offsetSm="3">
+          <ion-item>
+            <ion-label>To</ion-label>
+            <ion-datetime-button datetime="date-to"></ion-datetime-button>
+
+            <ion-modal [keepContentsMounted]="true">
+              <ng-template>
+                <ion-datetime
+                  id="date-to"
+                  name="date-to"
+                  presentation="date"
+                  [min]="selectedPlace.availableFrom?.toISOString()"
+                  [max]="selectedPlace.availableTo?.toISOString()"
+                  [ngModel]="endDate"
+                  required
+                ></ion-datetime>
+              </ng-template>
+            </ion-modal>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size-sm="6" offset-sm="3">
+          <ion-button
+            type="submit"
+            color="primary"
+            expand="block"
+            [disabled]="!f.valid || !datesValid()"
+          >
+            Book!
+          </ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </form>
 </ion-content>
