--- a/src/app/places/discover/discover.page.html
+++ b/src/app/places/discover/discover.page.html
@@ -1,44 +1,50 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>Discover</ion-title>
+    <ion-title>Discover Places</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true" class="ion-padding">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-buttons slot="start">
-        <ion-menu-button></ion-menu-button>
-      </ion-buttons>
-      <ion-title size="large">Discover</ion-title>
-    </ion-toolbar>
-  </ion-header>
-  <ion-segment value="all" (ionChange)="onFilterUpdate($event)">
-    <ion-segment-button value="all"> All Places </ion-segment-button>
-    <ion-segment-button value="bookable"> Bookable Places </ion-segment-button>
+<ion-content class="ion-padding">
+  <ion-segment (ionChange)="onFilterUpdate($event)" value="all">
+    <ion-segment-button value="all">All Places</ion-segment-button>
+    <ion-segment-button value="bookable">Bookable Places</ion-segment-button>
   </ion-segment>
-  <ion-grid>
+  <ion-grid *ngIf="!relevantPlaces || relevantPlaces.length <= 0">
+    <ion-row>
+      <ion-col size="12" size-sm="8" offset-sm="2" class="ion-text-center">
+        <p>There are no bookable places right now, please come back later!</p>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  <ion-grid *ngIf="relevantPlaces.length > 0">
     <ion-row>
       <ion-col size="12" size-sm="8" offset-sm="2" class="ion-text-center">
         <ion-card>
           <ion-card-header>
-            <ion-card-title>{{ loadedPlaces[0].title }}</ion-card-title>
-            <ion-card-subtitle>
-              {{loadedPlaces[0].price | currency}} / Night
-            </ion-card-subtitle>
+            <ion-card-title>{{ relevantPlaces[0].title }}</ion-card-title>
+            <ion-card-subtitle
+              >{{ relevantPlaces[0].price | currency }} /
+              Night</ion-card-subtitle
+            >
           </ion-card-header>
-          <ion-img [src]="loadedPlaces[0].imageUrl"></ion-img>
+          <ion-img [src]="relevantPlaces[0].imageUrl"></ion-img>
           <ion-card-content>
-            <p>{{ loadedPlaces[0].description}}</p>
+            <p>{{ relevantPlaces[0].description }}</p>
           </ion-card-content>
           <div>
             <ion-button
               fill="clear"
               color="primary"
-              [routerLink]="['/', 'places', 'tabs', 'discover', loadedPlaces[0].id]"
+              [routerLink]="[
+                '/',
+                'places',
+                'tabs',
+                'discover',
+                relevantPlaces[0].id
+              ]"
             >
               More
             </ion-button>
@@ -50,7 +56,7 @@
       <ion-col size="12" size-sm="8" offset-sm="2" class="ion-text-center">
         <ion-list>
           <ion-item
-            *ngFor="let place of loadedPlaces.slice(1)"
+            *ngFor="let place of listedLoadedPlaces"
             [routerLink]="['/', 'places', 'tabs', 'discover', place.id]"
             detail
           >
