--- a/src/app/places/offers/edit-offer/edit-offer.page.html
+++ b/src/app/places/offers/edit-offer/edit-offer.page.html
@@ -1,10 +1,12 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/places/tabs/offers"></ion-back-button>
+      <ion-back-button
+        [defaultHref]="'/places/tabs/offers/' + placeId"
+      ></ion-back-button>
     </ion-buttons>
     <ion-title>Edit Offer</ion-title>
-    <ion-buttons slot="primary">
+    <ion-buttons slot="primary" *ngIf="!isLoading">
       <ion-button (click)="onUpdateOffer()" [disabled]="!form.valid">
         <ion-icon name="checkmark" slot="icon-only"></ion-icon>
       </ion-button>
@@ -12,40 +14,40 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <form [formGroup]="form">
+<ion-content class="ion-padding">
+  <div *ngIf="isLoading" class="ion-text-center">
+    <ion-spinner color="primary"></ion-spinner>
+  </div>
+  <form [formGroup]="form" *ngIf="!isLoading">
     <ion-grid>
       <ion-row>
-        <ion-col sizeSm="6" offsetSm="3">
+        <ion-col size-sm="6" offset-sm="3">
           <ion-item>
+            <ion-label position="floating">Title</ion-label>
             <ion-input
               type="text"
               autocomplete
               autocorrect
-              label="Title"
-              labelPlacement="floating"
               formControlName="title"
             ></ion-input>
           </ion-item>
         </ion-col>
       </ion-row>
       <ion-row>
-        <ion-col sizeSm="6" offsetSm="3">
+        <ion-col size-sm="6" offset-sm="3">
           <ion-item>
-            <ion-textarea
-              rows="3"
-              label="Short Description"
-              labelPlacement="floating"
-              formControlName="description"
-            ></ion-textarea>
+            <ion-label position="floating">Short Description</ion-label>
+            <ion-textarea rows="3" formControlName="description"></ion-textarea>
           </ion-item>
         </ion-col>
       </ion-row>
       <ion-row
-        *ngIf="!form.get('description')?.valid && form.get('description')?.touched"
+        *ngIf="
+          !form.get('description')?.valid && form.get('description')?.touched
+        "
       >
-        <ion-col sizeSm="6" offsetSm="3">
-          <p>Description must not be between 1 and 180 characters.</p>
+        <ion-col size-sm="6" offset-sm="3">
+          <p>Description must be between 1 and 180 characters.</p>
         </ion-col>
       </ion-row>
     </ion-grid>
