--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -1,15 +1,10 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>{{ isLogin ? "Login" : "Signup" }}</ion-title>
+    <ion-title>{{ isLogin ? 'Login' : 'Signup' }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true" class="ion-padding">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">{{ isLogin ? "Login" : "Signup" }}</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="ion-padding">
   <form #f="ngForm" (ngSubmit)="onSubmit(f)">
     <ion-grid>
       <ion-row>
@@ -17,9 +12,9 @@
           <ion-list>
             <ion-item>
               <ion-input
-                type="email"
                 label="Email"
                 labelPlacement="floating"
+                type="email"
                 ngModel
                 name="email"
                 required
@@ -31,15 +26,16 @@
               *ngIf="!emailCtrl.valid && emailCtrl.touched"
               lines="none"
             >
-              <p>Should be a valid email address.</p>
+              <ion-label> Should be a valid email address. </ion-label>
             </ion-item>
             <ion-item>
               <ion-input
-                type="password"
                 label="Password"
                 labelPlacement="floating"
+                type="password"
                 ngModel
                 name="password"
+                required
                 minlength="6"
                 #passwordCtrl="ngModel"
               ></ion-input>
@@ -48,34 +44,36 @@
               *ngIf="!passwordCtrl.valid && passwordCtrl.touched"
               lines="none"
             >
-              <p>Should be at least 6 characters long.</p>
+              <ion-label> Should at least be 6 characters long. </ion-label>
             </ion-item>
           </ion-list>
         </ion-col>
       </ion-row>
       <ion-row>
-        <ion-col sizeSm="6" offsetSm="3">
+        <ion-col size-sm="6" offset-sm="3">
           <ion-button
             type="button"
             color="primary"
             fill="clear"
-            expand="full"
+            expand="block"
             (click)="onSwitchAuthMode()"
           >
-            Switch to {{ isLogin ? "Signup" : "Login" }}
+            Switch to {{ isLogin ? 'Signup' : 'Login' }}
           </ion-button>
           <ion-button
             type="submit"
             color="primary"
             expand="block"
-            fill="outline"
-            (click)="onLogin()"
             [disabled]="!f.valid"
           >
-            Login
+            {{ isLogin ? 'Login' : 'Signup' }}
           </ion-button>
         </ion-col>
       </ion-row>
     </ion-grid>
   </form>
+
+  <!-- <div class="ion-text-center">
+    <ion-spinner color="primary" *ngIf="isLoading"></ion-spinner>
+  </div> -->
 </ion-content>
